src/main/java/io/qubus/capnproto/antlr/CapnProtoParser.java
// Generated from E:/Trip/idea_plugin_env/CapnprotoSchemaLangPlugin\CapnProto.g4 by ANTLR 4.7
package io.qubus.capnproto.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CapnProtoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, LOCATOR=29, TEXT=30, INTEGER=31, 
		FLOAT=32, HEXADECIMAL=33, FILE_ID=34, BOOLEAN=35, VOID=36, NAME=37, COMMENT=38, 
		WHITESPACE=39;
	public static final int
		RULE_document = 0, RULE_file_identifier = 1, RULE_using_import = 2, RULE_namespace = 3, 
		RULE_document_content = 4, RULE_struct_def = 5, RULE_struct_content = 6, 
		RULE_interface_def = 7, RULE_interface_content = 8, RULE_field_def = 9, 
		RULE_type = 10, RULE_inner_type = 11, RULE_enum_def = 12, RULE_annotation_reference = 13, 
		RULE_enum_content = 14, RULE_named_union_def = 15, RULE_unnamed_union_def = 16, 
		RULE_union_content = 17, RULE_group_def = 18, RULE_group_content = 19, 
		RULE_function_def = 20, RULE_generic_type_parameters = 21, RULE_function_parameters = 22, 
		RULE_annotation_def = 23, RULE_annotation_parameters = 24, RULE_const_def = 25, 
		RULE_const_value = 26, RULE_literal_union = 27, RULE_literal_list = 28, 
		RULE_literal_bytes = 29, RULE_union_mapping = 30, RULE_inner_using = 31;
	public static final String[] ruleNames = {
		"document", "file_identifier", "using_import", "namespace", "document_content", 
		"struct_def", "struct_content", "interface_def", "interface_content", 
		"field_def", "type", "inner_type", "enum_def", "annotation_reference", 
		"enum_content", "named_union_def", "unnamed_union_def", "union_content", 
		"group_def", "group_content", "function_def", "generic_type_parameters", 
		"function_parameters", "annotation_def", "annotation_parameters", "const_def", 
		"const_value", "literal_union", "literal_list", "literal_bytes", "union_mapping", 
		"inner_using"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'using'", "'='", "'import'", "'.'", "'$'", "'.namespace'", 
		"'('", "')'", "'struct'", "'{'", "'}'", "'interface'", "'extends'", "':'", 
		"','", "'enum'", "'.ann'", "':union'", "'union'", "':group'", "'->'", 
		"'['", "']'", "'annotation'", "'const'", "'-'", "'0x'", null, null, null, 
		null, null, null, null, "'void'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "LOCATOR", "TEXT", "INTEGER", "FLOAT", "HEXADECIMAL", 
		"FILE_ID", "BOOLEAN", "VOID", "NAME", "COMMENT", "WHITESPACE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CapnProto.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CapnProtoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public File_identifierContext file_identifier() {
			return getRuleContext(File_identifierContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CapnProtoParser.EOF, 0); }
		public List<Using_importContext> using_import() {
			return getRuleContexts(Using_importContext.class);
		}
		public Using_importContext using_import(int i) {
			return getRuleContext(Using_importContext.class,i);
		}
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public List<Document_contentContext> document_content() {
			return getRuleContexts(Document_contentContext.class);
		}
		public Document_contentContext document_content(int i) {
			return getRuleContext(Document_contentContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			file_identifier();
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(65);
				using_import();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(71);
				namespace();
				}
			}

			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__12) | (1L << T__16) | (1L << T__24) | (1L << T__25) | (1L << NAME))) != 0)) {
				{
				{
				setState(74);
				document_content();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_identifierContext extends ParserRuleContext {
		public TerminalNode FILE_ID() { return getToken(CapnProtoParser.FILE_ID, 0); }
		public File_identifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterFile_identifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitFile_identifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitFile_identifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_identifierContext file_identifier() throws RecognitionException {
		File_identifierContext _localctx = new File_identifierContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(FILE_ID);
			setState(83);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Using_importContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(CapnProtoParser.TEXT, 0); }
		public List<TerminalNode> NAME() { return getTokens(CapnProtoParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(CapnProtoParser.NAME, i);
		}
		public Using_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_using_import; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterUsing_import(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitUsing_import(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitUsing_import(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Using_importContext using_import() throws RecognitionException {
		Using_importContext _localctx = new Using_importContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_using_import);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(T__1);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAME) {
				{
				setState(86);
				match(NAME);
				setState(87);
				match(T__2);
				}
			}

			setState(90);
			match(T__3);
			setState(91);
			match(TEXT);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(92);
				match(T__4);
				setState(93);
				match(NAME);
				}
			}

			setState(96);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(CapnProtoParser.NAME, 0); }
		public TerminalNode TEXT() { return getToken(CapnProtoParser.TEXT, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitNamespace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitNamespace(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__5);
			setState(99);
			match(NAME);
			setState(100);
			match(T__6);
			setState(101);
			match(T__7);
			setState(102);
			match(TEXT);
			setState(103);
			match(T__8);
			setState(104);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Document_contentContext extends ParserRuleContext {
		public Struct_defContext struct_def() {
			return getRuleContext(Struct_defContext.class,0);
		}
		public Interface_defContext interface_def() {
			return getRuleContext(Interface_defContext.class,0);
		}
		public Function_defContext function_def() {
			return getRuleContext(Function_defContext.class,0);
		}
		public Annotation_defContext annotation_def() {
			return getRuleContext(Annotation_defContext.class,0);
		}
		public Const_defContext const_def() {
			return getRuleContext(Const_defContext.class,0);
		}
		public Enum_defContext enum_def() {
			return getRuleContext(Enum_defContext.class,0);
		}
		public Document_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterDocument_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitDocument_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitDocument_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Document_contentContext document_content() throws RecognitionException {
		Document_contentContext _localctx = new Document_contentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_document_content);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				struct_def();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				interface_def();
				}
				break;
			case NAME:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				function_def();
				}
				break;
			case T__24:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				annotation_def();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				const_def();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 6);
				{
				setState(111);
				enum_def();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_defContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Annotation_referenceContext annotation_reference() {
			return getRuleContext(Annotation_referenceContext.class,0);
		}
		public List<Struct_contentContext> struct_content() {
			return getRuleContexts(Struct_contentContext.class);
		}
		public Struct_contentContext struct_content(int i) {
			return getRuleContext(Struct_contentContext.class,i);
		}
		public Struct_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterStruct_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitStruct_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitStruct_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Struct_defContext struct_def() throws RecognitionException {
		Struct_defContext _localctx = new Struct_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_struct_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(T__9);
			setState(115);
			type();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(116);
				annotation_reference();
				}
			}

			setState(119);
			match(T__10);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__9) | (1L << T__12) | (1L << T__16) | (1L << T__19) | (1L << T__24) | (1L << T__25) | (1L << NAME))) != 0)) {
				{
				{
				setState(120);
				struct_content();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(126);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_contentContext extends ParserRuleContext {
		public Field_defContext field_def() {
			return getRuleContext(Field_defContext.class,0);
		}
		public Enum_defContext enum_def() {
			return getRuleContext(Enum_defContext.class,0);
		}
		public Named_union_defContext named_union_def() {
			return getRuleContext(Named_union_defContext.class,0);
		}
		public Unnamed_union_defContext unnamed_union_def() {
			return getRuleContext(Unnamed_union_defContext.class,0);
		}
		public Interface_defContext interface_def() {
			return getRuleContext(Interface_defContext.class,0);
		}
		public Annotation_defContext annotation_def() {
			return getRuleContext(Annotation_defContext.class,0);
		}
		public Struct_defContext struct_def() {
			return getRuleContext(Struct_defContext.class,0);
		}
		public Group_defContext group_def() {
			return getRuleContext(Group_defContext.class,0);
		}
		public Const_defContext const_def() {
			return getRuleContext(Const_defContext.class,0);
		}
		public Inner_usingContext inner_using() {
			return getRuleContext(Inner_usingContext.class,0);
		}
		public Struct_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterStruct_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitStruct_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitStruct_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Struct_contentContext struct_content() throws RecognitionException {
		Struct_contentContext _localctx = new Struct_contentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_struct_content);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				field_def();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				enum_def();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				named_union_def();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				unnamed_union_def();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				interface_def();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(133);
				annotation_def();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(134);
				struct_def();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(135);
				group_def();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(136);
				const_def();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(137);
				inner_using();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_defContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<Interface_contentContext> interface_content() {
			return getRuleContexts(Interface_contentContext.class);
		}
		public Interface_contentContext interface_content(int i) {
			return getRuleContext(Interface_contentContext.class,i);
		}
		public Interface_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterInterface_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitInterface_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitInterface_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interface_defContext interface_def() throws RecognitionException {
		Interface_defContext _localctx = new Interface_defContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_interface_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__12);
			setState(141);
			type();
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__13) {
				{
				setState(142);
				match(T__13);
				setState(143);
				match(T__7);
				setState(144);
				type();
				setState(145);
				match(T__8);
				}
			}

			setState(149);
			match(T__10);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__12) | (1L << T__16) | (1L << T__19) | (1L << NAME))) != 0)) {
				{
				{
				setState(150);
				interface_content();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Interface_contentContext extends ParserRuleContext {
		public Field_defContext field_def() {
			return getRuleContext(Field_defContext.class,0);
		}
		public Enum_defContext enum_def() {
			return getRuleContext(Enum_defContext.class,0);
		}
		public Named_union_defContext named_union_def() {
			return getRuleContext(Named_union_defContext.class,0);
		}
		public Unnamed_union_defContext unnamed_union_def() {
			return getRuleContext(Unnamed_union_defContext.class,0);
		}
		public Interface_defContext interface_def() {
			return getRuleContext(Interface_defContext.class,0);
		}
		public Struct_defContext struct_def() {
			return getRuleContext(Struct_defContext.class,0);
		}
		public Function_defContext function_def() {
			return getRuleContext(Function_defContext.class,0);
		}
		public Interface_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interface_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterInterface_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitInterface_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitInterface_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Interface_contentContext interface_content() throws RecognitionException {
		Interface_contentContext _localctx = new Interface_contentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_interface_content);
		try {
			setState(165);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				field_def();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(159);
				enum_def();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(160);
				named_union_def();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(161);
				unnamed_union_def();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(162);
				interface_def();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(163);
				struct_def();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(164);
				function_def();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_defContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(CapnProtoParser.NAME, 0); }
		public TerminalNode LOCATOR() { return getToken(CapnProtoParser.LOCATOR, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Const_valueContext const_value() {
			return getRuleContext(Const_valueContext.class,0);
		}
		public Field_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterField_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitField_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitField_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Field_defContext field_def() throws RecognitionException {
		Field_defContext _localctx = new Field_defContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_field_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(NAME);
			setState(168);
			match(LOCATOR);
			setState(169);
			match(T__14);
			setState(170);
			type();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(171);
				match(T__2);
				setState(172);
				const_value();
				}
			}

			setState(175);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(CapnProtoParser.NAME, 0); }
		public Inner_typeContext inner_type() {
			return getRuleContext(Inner_typeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CapnProtoListener ) ((CapnProtoListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CapnProtoVisitor ) return ((CapnProtoVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}
